--- a/Lab3/Frontend/react-axios/package.json
+++ b/Lab3/Frontend/react-axios/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-axios": "file:",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
